# gifty.py

./: pyproject.toml
gifty-core/: __init__.py  pyproject.toml
gifty-core/database/: __init__.py  engine.py  initialize.py  session.py
gifty-core/models/: __init__.py  event.py  gift.py  giftee.py  photo.py
