[tool.poetry]
name = "gifty"
version = "0.1.0"
description = "Gifty workspace"
authors = ["Gavin Dean <gavindean90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
